# discord-lfg

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  bot.py  dockerfile  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  versions.json
0.0.0/: 404.html  index.html  objects.inv
0.0.0/CHANGELOG/: index.html
0.0.0/config/command-config/: index.html
0.0.0/config/general-config/: index.html
0.0.0/config/introduction/: index.html
0.0.0/config/token/: index.html
0.0.0/contributing/: index.html
0.0.0/installation/: index.html
0.0.0/reference/discord_lfg/bot/: index.html
0.0.0/reference/discord_lfg/commands/: index.html
0.0.0/reference/discord_lfg/group_builder/: index.html
0.0.0/reference/discord_lfg/input_config/: index.html
0.0.0/reference/discord_lfg/lfg/: index.html
0.0.0/reference/discord_lfg/utils/autocompletion/: index.html
0.0.0/reference/discord_lfg/utils/general/: index.html
0.0.0/reference/discord_lfg/utils/resources/: index.html
0.0.0/reference/discord_lfg/utils/roles/: index.html
0.0.0/running/: index.html
0.0.0/search/: search_index.json
CHANGELOG/: index.html
config/command-config/: index.html
config/general-config/: index.html
config/introduction/: index.html
config/token/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv
dev/CHANGELOG/: index.html
dev/contributing/: index.html
dev/installation/: index.html
dev/reference/db_py/autocompletion/: index.html
dev/reference/db_py/commands/help/: index.html
dev/reference/db_py/commands/lfg/: index.html
dev/reference/db_py/db_instance/: index.html
dev/reference/db_py/lfg_options/: index.html
dev/reference/db_py/resources/: index.html
dev/reference/db_py/roles/: index.html
dev/reference/db_py/utils/: index.html
dev/resources/: emojis.toml  messages.toml  names.toml  passphrases.toml  time_types.toml
dev/resources/dungeons/: midnight-1.toml  tww-3.toml
dev/search/: search_index.json
docs/: contributing.md  hosting_and_running.md  index.md  installation.md  running.md
docs/config/: command-config.md  general-config.md  introduction.md  token.md
docs/static/: extras.css  hooks.py
docs/users/: creating_groups.md  joining_groups.md  stats.md
hosting_and_running/: index.html
installation/: index.html
reference/discord_lfg/bot/: index.html
reference/discord_lfg/commands/: index.html
reference/discord_lfg/group_builder/: index.html
reference/discord_lfg/input_config/: index.html
reference/discord_lfg/lfg/: index.html
reference/discord_lfg/stats/: index.html
reference/discord_lfg/utils/autocompletion/: index.html
reference/discord_lfg/utils/general/: index.html
reference/discord_lfg/utils/resources/: index.html
reference/discord_lfg/utils/roles/: index.html
requirements/: base.txt  dev.txt
resources/: emojis.toml  lists.toml  messages.py  messages.toml  passphrases.toml  time_types.toml
resources/dungeons/: midnight-1.toml  tww-3.toml
running/: index.html
search/: search_index.json
src/db-py/: __init__.py  db_instance.py  resources.py
src/db_py/: __init__.py  autocompletion.py  bot.py  buttons.py  db_display.py  db_instance.py  db_instance_edit.py  group_builder.py  lfg_options.py  resources.py  roles.py  utils.py
src/db_py/commands/: __init__.py  help.py  lfg.py
src/discord_lfg/: __init__.py  autocompletion.py  bot.py  commands.py  group_builder.py  input_config.py  lfg.py  lfg_options.py  resources.py  roles.py  stats.py  utils.py
src/discord_lfg/commands/: __init__.py  help.py  lfg.py
src/discord_lfg/resources/: __init__.py  names.toml
src/discord_lfg/utils/: __init__.py  autocompletion.py  general.py  resources.py  roles.py
static/: extras.css  hooks.py
tests/: conftest.py  test_group_builder.py  test_lfg.py  test_stats.py
tests/fixture_data/lfg_data/date=2020-01-02/: 00000000.parquet
tests/fixture_data/lfg_data/date=2026-01-01/: 00000000.parquet
tests/fixture_data/lfg_data/date=2026-04-01/: 00000000.parquet
tests/fixture_data/lfg_data/date_finished=2020-01-02/: 00000000.parquet
tests/fixture_data/lfg_data/date_finished=2026-01-01/: 00000000.parquet
tests/fixture_data/lfg_data/date_finished=2026-04-01/: 00000000.parquet
users/creating_groups/: index.html
users/joining_groups/: index.html
users/stats/: index.html
