[tool.ruff]
line-length = 100
preview = true # required to activate many pycodestyle errors and warnings as of 2024-03-13

[tool.ruff.format]
exclude = [".*.egg-info", "requirements/**"]
skip-magic-trailing-comma = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Docstrings
    "D"
]
ignore = [
    # here and below, rules are redundant with formatter, see
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "E501",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) and `F401` (unused imports) in all `__init__.py` files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"*.ipynb" = ["E402"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200
ignore-overlong-task-comments = true

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

name = "discord_lfg"
authors = [
    { name = "aptosaurinae", email = "dukeslet@gmail.com" },
]
maintainers = []
description = "Group forming system for Discord."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["discord", "lfg", "wow"]
dynamic = ["optional-dependencies", "version"]
dependencies = [
    "discord-py>=2.6.4",
    "polars>=1.8.2",
]

[project.urls]
repository = "https://github.com/aptosaurinae/discord-lfg"
changelog = "https://github.com/aptosaurinae/discord-lfg/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "mike>=2,<3",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.4,<10",
    "mkdocstrings-python<2",
    "pre-commit<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24.0",
    "pytest-cov<5",
    "pytest-mock<4",
    "pytest-timeout<3",
    "pytest-xdist<4",
]

[tool.uv.sources]
discord_lfg = { path = ".", editable = true }

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
discord_lfg = ["resources/*.toml"]
